--- a/02-express/templates/index.html
+++ b/02-express/templates/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>sup bruhhh!! is home page</h1>
+    <h1>shubh </h1>
+    <h1>vaishnavi cutee</h1>
+   
 </body>
 </html>
